fix mocha pre white-space pre-wrap; finish share-link styles; bold prev-next links

--- a/themes/dfkaye/assets/css/test.css
+++ b/themes/dfkaye/assets/css/test.css
@@ -12,6 +12,10 @@
 {{ $textColor := "#000" }}
 {{ $bgcolor := "#fff" }}
 {{ $dateTimeColor := "#757575" }}
+
+{{ $emailColor := "#444444" }}
+{{ $facebookColor := "#3B5998" }}
+
 {{ $fillColor := "#ababab" }}
 {{ $iconHeight := "32px" }}
 {{ $iconMargin := ".5em 0.25em -.5em" }}
@@ -20,6 +24,10 @@
 {{ $linkedinColor := "#0077b5" }}
 {{ $netlifyColor := "#009387" }}
 {{ $githubColor := "#6cc644" }}
+
+{{ $hackernewsColor := "#ff6600" }}
+{{ $redditColor := "#ff5700" }}
+
 {{ $twitterColor := "#1da1f2" }}
 
 * {
@@ -435,8 +443,55 @@ a:not([icon]):active {
 
 /* share links */
 
-[rel$=" share"] {
+[share-links]:before {
+  content: "Links open in new window";
+  color: gray;
+  font-size: 80%;
+  font-style: italic;
+  margin-top: -1.5em;  
+  position: absolute;
+}
+
+[share-links] {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+[rel*="external"] {
+  margin: .5em .5em .5em 0;
+  outline: 1px solid rgba(22, 22, 254, .5);
   padding: 0.5em;
+  white-space: nowrap;
+}
+
+[rel*="external"]:link,
+[rel*="external"]:hover,
+[rel*="external"]:active {
+  color: {{ $bgcolor }};
+}
+
+[rel*="external"][href^="https://twitter"] {
+  background-color: {{ $twitterColor }};
+}
+
+[rel*="external"][href^="https://facebook"] {
+  background-color: {{ $facebookColor }};
+}
+
+[rel*="external"][href^="https://reddit"] {
+  background-color: {{ $redditColor }};
+}
+
+[rel*="external"][href^="https://news.ycombinator"] {
+  background-color: {{ $hackernewsColor }};
+}
+
+[rel*="external"][href^="https://linkedin"] {
+  background-color: {{ $linkedinColor }};
+}
+
+[rel*="external"][href^="mailto:"] {
+  background-color: {{ $emailColor }};
 }
 
 
@@ -482,6 +537,7 @@ a:not([icon]):active {
 
 [prev-next] {
   display: flex;
+  font-weight: bold;
   justify-content: center;
 }
 
